external post links are fully functional :D

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -13,6 +13,18 @@
 	color: #1F94AE;
 }
 
+.post_external_link {
+  float:right;
+  margin-right: 5px;
+  margin-top: 2px;
+}
+
+.post_external {
+  margin-top: 65px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 
 // Post Box and Nav Formatting
 
