--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,8 +1,14 @@
 <%# For each spliced post made of pieces (text and hashtags) %>
 <% @posts_spliced.reverse.each do |post_pieces| %>
   <div class="panel panel-default">
-    <div class="panel-body panel_body_text" style="word-wrap: break-word;">
 
+  	 <%# Add external link to post in top right corner %>
+     <div class="post_external_link">
+     	<a href="<%= '/posts/' + post_pieces[-1].to_s + '/comments' %>">
+     		<i class="fa fa-external-link"></i></a>
+ 	 </div>
+
+    <div class="panel-body panel_body_text" style="word-wrap: break-word;">
      <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>		
 	 <% post_pieces[0..-2].each do |piece| %>
 	 	<%= piece %>
