Added :ip to comments and posts, completed pro-fair-sharing measure via post creation limit on validation based on ip. Squashed bug that prevented capitilization in posts by downcasing select parts in controller, not everything. Still need to implement for comments

--- a/app/views/posts/_new.html.erb
+++ b/app/views/posts/_new.html.erb
@@ -4,6 +4,8 @@
 <!-- <h1 id='share_idea'>Share Idea</h1> -->
 
 <%= form_for :post, url: posts_path do |f| %>
+
+	<%= f.hidden_field :ip, :value => request.remote_ip.split('.').join().to_i %>
   <p>
     <%= f.text_area :text, :class => "post_box", :placeholder => "Let your thoughts flow .  .   .    .     .    and #tag away!" %>
   </p>
