--- a/app/views/atags/show.html.erb
+++ b/app/views/atags/show.html.erb
@@ -21,23 +21,25 @@
                   <div class="col-sm-9">
                     <nav class="collapse navbar-collapse" role="navigation">
 
-                    <ul class="nav navbar-nav navbar-right notify">
-                      <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation fa-lg"></i></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="">More</a></li>
-                          <li><a href="">More</a></li>
-                          <li><a href="">More</a></li>
-                          <li><a href="">More</a></li>
-                          <li><a href="">More</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                    <ul class="nav navbar-nav home_button navbar-right">
-                      <li>
-                        <a href="/"><i class="glyphicon glyphicon-home"></i> Home</a>
-                      </li>
-                    </ul>
+                    	<%= link_to '#' + @atag.tag, @atag, :class => 'atag_title_link' %>
+                    	
+	                    <ul class="nav navbar-nav navbar-right notify">
+	                      <li class="dropdown">
+	                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation fa-lg"></i></a>
+	                        <ul class="dropdown-menu">
+	                          <li><a href="">More</a></li>
+	                          <li><a href="">More</a></li>
+	                          <li><a href="">More</a></li>
+	                          <li><a href="">More</a></li>
+	                          <li><a href="">More</a></li>
+	                        </ul>
+	                      </li>
+	                    </ul>
+	                    <ul class="nav navbar-nav home_button navbar-right">
+	                      <li>
+	                        <a href="/"><i class="glyphicon glyphicon-home"></i> Home</a>
+	                      </li>
+	                    </ul>
                     </nav>
                   </div>
                 </div>
