--- a/app/assets/stylesheets/atags.css.scss
+++ b/app/assets/stylesheets/atags.css.scss
@@ -11,12 +11,24 @@
 }
 
 .atag_title_main:hover {
+	color: #000000;
+	text-shadow: 1px 1px 2px #065655;
+}
+
+.atag_external_link {
 	color: #ffffff;
+	text-shadow: 1px 1px 2px #000000;
+	margin-top: 12px;
+	margin-left: 10px;
+}
+
+.atag_external_link:hover {
+	color: #000000;
 	text-shadow: 1px 1px 2px #065655;
 }
 
 .atags_ajax {
-	padding-top: 70px;
+	padding-top: 40px;
 }
 
 .atag_title_link {
