--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -39,7 +39,7 @@
                         <div class="input-group input-group-sm" class="search_box_div">
                           <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" class="search_box">
                           <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
                           </div>
                         </div>
                     </form>
@@ -58,7 +58,7 @@
                     </ul>
                     <ul class="nav navbar-nav home_button navbar-right">
                       <li>
-                        <a href="/"><i class="glyphicon glyphicon-home"></i> Home</a>
+                        <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
                       </li>
                     </ul>
                     </nav>
@@ -71,9 +71,9 @@
             <!-- sidebar -->
             <div class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
               
-              	<ul class="nav nav_padding">
-          			<li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
-            	</ul>
+              	<div class="nav nav_padding mobile_arrow_box">
+          			<a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="fa fa-chevron-right fa-3x mobile_arrow"></i></a>
+            	  </div>
                
                 <ul class="nav hidden-xs" id="lg-menu">
                   
@@ -95,16 +95,8 @@
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
-                      <a href="#about"><i class="glyphicon glyphicon-heart-empty"></i> About Us </a><a href="#contact">| Contact </a><a href="#help">| Help </a>
+                      <a href="#about"><i class="fa fa-smile-o"></i> About Us </a><a href="mailto:thinkspace@mit.edu" target="_blank">| Contact </a><a href="#help">| Help </a>
                     </li>
-                </ul>
-              
-              	<!-- tiny only nav-->
-              <ul class="nav visible-xs" id="xs-menu">
-                  	<li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
-                    <li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
-                  	<li><a href="#" class="text-center"><i class="glyphicon glyphicon-paperclip"></i></a></li>
-                    <li><a href="#" class="text-center"><i class="glyphicon glyphicon-refresh"></i></a></li>
                 </ul>
               
             </div>
@@ -145,32 +137,6 @@
           
         </div>
     </div>
-</div>
-
-
-<!--post modal-->
-<div id="postModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-  <div class="modal-content">
-      <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			Update Status
-      </div>
-      <div class="modal-body">
-          <form class="form center-block">
-            <div class="form-group">
-              <textarea class="form-control input-lg" autofocus="" placeholder="What do you want to share?"></textarea>
-            </div>
-          </form>
-      </div>
-      <div class="modal-footer">
-          <div>
-          <button class="btn btn-primary btn-sm" data-dismiss="modal" aria-hidden="true">Post</button>
-            <ul class="pull-left list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
-		  </div>	
-      </div>
-  </div>
-  </div>
 </div>
 	</body>
 </html>
