--- a/app/views/atags/show.html.erb
+++ b/app/views/atags/show.html.erb
@@ -27,17 +27,13 @@
 	                      <li class="dropdown">
 	                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation fa-lg"></i></a>
 	                        <ul class="dropdown-menu">
-	                          <li><a href="">More</a></li>
-	                          <li><a href="">More</a></li>
-	                          <li><a href="">More</a></li>
-	                          <li><a href="">More</a></li>
-	                          <li><a href="">More</a></li>
+	                          <li><a href="/atags/6">Feedback</a></li>
 	                        </ul>
 	                      </li>
 	                    </ul>
 	                    <ul class="nav navbar-nav home_button navbar-right">
 	                      <li>
-	                        <a href="/"><i class="glyphicon glyphicon-home"></i> Home</a>
+	                        <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
 	                      </li>
 	                    </ul>
                     </nav>
