removed about and help, so just contact at bottom

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -91,7 +91,7 @@
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
-                      <a href="#about"><i class="fa fa-smile-o"></i> About Us </a><a href="mailto:thinkspace@mit.edu" target="_blank">| Contact </a><a href="#help">| Help </a>
+                      <a href="mailto:thinkspace@mit.edu" target="_blank"><i class="fa fa-smile-o"></i> Contact </a>
                     </li>
                 </ul>
               
