--- a/app/views/posts/_new.html.erb
+++ b/app/views/posts/_new.html.erb
@@ -7,7 +7,7 @@
 
 	<%= f.hidden_field :ip, :value => request.remote_ip.split('.').join().to_i %>
   <p>
-    <%= f.text_area :text, :class => "post_box", :placeholder => "Let your thoughts flow .  .   .    .     .    and #tag away!" %>
+    <%= f.text_area :text, :class => "post_box", :placeholder => "Let your thoughts flow in this box .  .   .    .     .    and #tag away!" %>
   </p>
  
   <p>
