--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -91,7 +91,7 @@
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
-                      <a href="mailto:thinkspace@mit.edu" target="_blank"><i class="fa fa-smile-o"></i> Contact </a>
+                      <a href="reddit.com/r/IAMA" target="_blank"><i class="fa fa-smile-o"></i> Contact </a>
                     </li>
                 </ul>
               
