--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -20,7 +20,7 @@
 
 		 <%# Comments Ajax Link %>
 		 <div class='comments_load_box panel-footer'>
-		 <%= link_to content_tag(:span, @comments.where(post_id:post_pieces[-1]).length.to_s + ' Response(s)'), '/posts/' + post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
+		 <%= link_to content_tag(:span, @comments.where(post_id:post_pieces[-1]).count.to_s + ' Response(s)'), '/posts/' + post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
 		 </div>
 
   </div>
