improved notification size

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -181,6 +181,15 @@ hr {
   margin-right: 0px;
 }
 
+.fa-exclamation {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.col-sm-9 {
+  padding-right: 0px;
+}
+
 #main {
   background-image: linear-gradient(to bottom, #2196ca, rgba(25, 151, 93, 0.65));
   padding-left: 0;
