--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -181,6 +181,24 @@ hr {
   margin-right: 0px;
 }
 
+.notify_active {
+  background-color: #E9573F;
+}
+
+.alert_circle {
+    border-radius: 20%;
+    width: 22px;
+    height: 22px;
+    padding-top: 3px;
+    padding-right: 2px;
+    margin-bottom: -2px;
+    background: #E9573F;
+    color: #ffffff;
+    text-align: center;
+    font: 14px Arial, sans-serif;
+    border: 2px solid #ffffff;
+}
+
 .fa-exclamation {
   padding-right: 10px;
   padding-left: 10px;
