--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,6 +44,19 @@
                         </div>
                     </form>
 
+                  <%# If user has notifications display them %>
+                  <% @user = User.find_by(ip:request.remote_ip.split('.').join()) %>
+                  <% if @user.ncount > 0 %>
+                    <ul class="nav navbar-nav navbar-right notify notify_active"> 
+                      <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><div class="alert_circle"><%= @user.ncount %></div></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="/atags/6">Feedback</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  <%# Else just show normal %>
+                  <% else %>
                     <ul class="nav navbar-nav navbar-right notify">
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation fa-lg"></i></a>
@@ -52,6 +65,8 @@
                         </ul>
                       </li>
                     </ul>
+                  <% end %>
+
                     <ul class="nav navbar-nav home_button navbar-right">
                       <li>
                         <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
