--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,9 +49,9 @@
                   <% if @user.ncount > 0 %>
                     <ul class="nav navbar-nav navbar-right notify notify_active"> 
                       <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><div class="alert_circle"><%= @user.ncount %></div></a>
+                        <%= link_to '', @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %><div class="alert_circle"><%= @user.ncount %></div></a>
                         <ul class="dropdown-menu">
-                          <li><a href="/atags/6">Feedback</a></li>
+                          <li><div id="notify_ajax"></div></li>
                         </ul>
                       </li>
                     </ul>
