--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -185,6 +185,10 @@ hr {
   background-color: #E9573F;
 }
 
+.notification {
+  width: 100%;
+}
+
 .alert_circle {
     border-radius: 20%;
     width: 22px;
