--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,7 +49,7 @@
                   <% if @user.ncount > 0 %>
                     <ul class="nav navbar-nav navbar-right notify notify_active"> 
                       <li class="dropdown">
-                        <%= link_to '', @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %><div class="alert_circle"><%= @user.ncount %></div></a>
+                        <%= link_to '', @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %><div class="alert_circle"><%= @user.ncount %></div>
                         <ul class="dropdown-menu">
                           <li><div id="notify_ajax"></div></li>
                         </ul>
@@ -59,9 +59,9 @@
                   <% else %>
                     <ul class="nav navbar-nav navbar-right notify">
                       <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation fa-lg"></i></a>
+                        <%= link_to '', @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %><i class="fa fa-exclamation fa-lg"></i>
                         <ul class="dropdown-menu">
-                          <li><a href="/atags/6">Feedback</a></li>
+                          <li><div id="notify_ajax"></div></li>
                         </ul>
                       </li>
                     </ul>
