some mobile optimization

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -313,6 +313,7 @@ hr {
   } 
 }
 
+
 #sidebar-footer a {
   color: #ffffff;
   background-color: transparent;
@@ -595,6 +596,12 @@ small.text-muted {
     width: 100%;
     position: relative;
     padding-bottom: 20px;
+  }
+
+  // Top Nav
+  .search_box_form {
+    margin-left: 63px;
+    padding-right: 37px;
   }
 }
 
