--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,6 +19,7 @@
           <!-- top nav -->
                 <div class="navbar navbar-blue navbar-static-top">
 
+                    <!-- Mobile Top Nav -->
                     <div class="navbar-header col-sm-3">
                       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle</span>
@@ -27,15 +28,15 @@
                   <span class="icon-bar"></span>
                       </button>
                       <div>
+
                         <%= link_to image_tag('think_space_logo.png', :class => "tslogo"), '/' %>
                       </div>
                         <%= link_to 'Think Space', '/', :class => "think_space" %>
                     </div>
 
                   <div class="col-sm-9">
-                    <nav class="collapse navbar-collapse" role="navigation">
 
-                    <form class="navbar-left search_box_form">
+                    <form class="search_box_form">
                         <div class="input-group input-group-sm" class="search_box_div">
                           <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" class="search_box">
                           <div class="input-group-btn">
@@ -44,6 +45,7 @@
                         </div>
                     </form>
 
+                  <nav class="collapse navbar-collapse" role="navigation">
                   <%# If user has notifications display them %>
                   <% @user = User.find_by(ip:request.remote_ip.split('.').join()) %>
                   <% if @user.ncount > 0 %>
