removed notification standardized text

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -202,6 +202,7 @@ hr {
   line-height: 28px;
   padding-left: 10px;
   font-family: 'Bree Serif', serif;
+  word-wrap:break-word;
 }
 
 .notification a:hover {
