--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -21,27 +21,29 @@
                   <div class="col-sm-9">
                     <nav class="collapse navbar-collapse" role="navigation">
 
-                      <%# If user has notifications display them %>
-                      <% @user = User.find_by(ip:request.remote_ip.split('.').join()) %>
-                      <% if @user.ncount > 0 %>
-                        <ul class="nav navbar-nav navbar-right notify notify_active"> 
-                          <li class="dropdown">
-                            <%= link_to @user.ncount, @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %>
-                            <ul class="dropdown-menu">
-                              <li><div id="notify_ajax"></div></li>
-                            </ul>
-                          </li>
-                        </ul>
-                      <%# Else just show normal %>
-                      <% else %>
-                        <ul class="nav navbar-nav navbar-right notify">
-                          <li class="dropdown">
-                            <%= link_to @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} do %><i class="fa fa-exclamation fa-lg"></i><% end %>
-                            <ul class="dropdown-menu">
-                              <li><div id="notify_ajax"></div></li>
-                            </ul>
-                          </li>
-                        </ul>
+                    <%# If user has notifications display them %>
+                    <% @user = User.find_by(ip:request.remote_ip.split('.').join()) %>
+                      <% unless @user == nil %>
+                        <% if @user.ncount > 0 %>
+                          <ul class="nav navbar-nav navbar-right notify notify_active"> 
+                            <li class="dropdown">
+                              <%= link_to @user.ncount, @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %>
+                              <ul class="dropdown-menu">
+                                <li><div id="notify_ajax"></div></li>
+                              </ul>
+                            </li>
+                          </ul>
+                        <%# Else just show normal %>
+                        <% else %>
+                          <ul class="nav navbar-nav navbar-right notify">
+                            <li class="dropdown">
+                              <%= link_to @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} do %><i class="fa fa-exclamation fa-lg"></i><% end %>
+                              <ul class="dropdown-menu">
+                                <li><div id="notify_ajax"></div></li>
+                              </ul>
+                            </li>
+                          </ul>
+                        <% end %>
                       <% end %>
 
                       <ul class="nav navbar-nav home_button navbar-right">
