Notifications update with ajax responsiveness. Also heavily refactored code to more respect DRY using partials

--- a/app/views/atags/show.js.erb
+++ b/app/views/atags/show.js.erb
@@ -2,3 +2,7 @@
 $("#tag_posts").html("<%= escape_javascript(render @atag) %>");
 
 $(<%= 'post' + request.path.scan(/\d/).join('') %>).html("<%= escape_javascript(render @comments[0]) %>");
+
+
+// Check Notifications State
+$("#notify_state").html("<%= escape_javascript(render 'users/nstate') %>");
