--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,80 +1,28 @@
 <div class="wrapper">
-    <div class="box">
+  <div class="box">
+    <div class="column col-sm-12 col-xs-12" id="main">
 
-      <div class="column col-sm-12 col-xs-12" id="main">
-          <!-- top nav -->
-                <div class="navbar navbar-blue navbar-static-top">
+      <%# Render Top Navigation Bar and Contents %>
+      <%= render 'welcome/top_nav' %>
 
-                    <div class="navbar-header col-sm-3">
-                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle</span>
-                        <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                      </button>
-                      <div>
-                        <%= link_to image_tag('think_space_logo.png', :class => "tslogo"), '/' %>
-                      </div>
-                        <%= link_to 'Think Space', '/', :class => "think_space" %>
-                    </div>
+      <div class="panel panel-default post_external">
+        <div class="panel-body panel_body_text" style="word-wrap: break-word;">
+      		<% @post_spliced[0][0..-2].each do |piece| %>
+      			<%= piece %>
+      		<% end %>
 
-                  <div class="col-sm-9">
-                    <nav class="collapse navbar-collapse" role="navigation">
+      		<div id="<%= 'post' + @request_pieces[2].to_s %>"></div>
+       	</div>
 
-                    <%# If user has notifications display them %>
-                    <% @user = User.find_by(ip:request.remote_ip.split('.').join()) %>
-                      <% unless @user == nil %>
-                        <% if @user.ncount > 0 %>
-                          <ul class="nav navbar-nav navbar-right notify notify_active"> 
-                            <li class="dropdown">
-                              <%= link_to @user.ncount, @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %>
-                              <ul class="dropdown-menu">
-                                <li><div id="notify_ajax"></div></li>
-                              </ul>
-                            </li>
-                          </ul>
-                        <%# Else just show normal %>
-                        <% else %>
-                          <ul class="nav navbar-nav navbar-right notify">
-                            <li class="dropdown">
-                              <%= link_to @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} do %><i class="fa fa-exclamation fa-lg"></i><% end %>
-                              <ul class="dropdown-menu">
-                                <li><div id="notify_ajax"></div></li>
-                              </ul>
-                            </li>
-                          </ul>
-                        <% end %>
-                      <% end %>
-
-                      <ul class="nav navbar-nav home_button navbar-right">
-                      <li>
-                        <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
-                      </li>
-                      </ul>
-
-                    </nav>
-                  </div>
-                </div>
-                <!-- /top nav -->
-
-<div class="panel panel-default post_external">
-    <div class="panel-body panel_body_text" style="word-wrap: break-word;">
-		<% @post_spliced[0][0..-2].each do |piece| %>
-			<%= piece %>
-		<% end %>
-
-		<div id="<%= 'post' + @request_pieces[2].to_s %>"></div>
- 	</div>
-
-	<%# Comments Ajax Link %>
-	<div class='comments_load_box panel-footer'>
-	<%= link_to content_tag(:span, @comments.where(post_id:@request_pieces[2]).length.to_s + ' Response(s)'), '/posts/' + @request_pieces[2].to_s, remote: true, :class => 'comments_load' %>
-	</div>
- </div>
+      	<%# Comments Ajax Link %>
+      	<div class='comments_load_box panel-footer'>
+      	 <%= link_to content_tag(:span, @comments.where(post_id:@request_pieces[2]).length.to_s + ' Response(s)'), '/posts/' + @request_pieces[2].to_s, remote: true, :class => 'comments_load' %>
+      	</div>
+      </div>
 
 
-</div>
-</div>
+    </div>
+  </div>
 </div>
 
 
