--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,3 +1,6 @@
 $("#notify_ajax").html("<%= escape_javascript(render @user) %>");
 
+// Change Notifications State
+$("#notify_state").html("<%= escape_javascript(render 'users/nstate') %>");
+
 
