--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -194,6 +194,35 @@ hr {
   background-color: #1D8C5C;
 }
 
+// Update state with ajax
+
+.notify_state_off {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  pointer-events: none;
+}
+
+.notify_state_on {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  pointer-events: none;
+  background-color: #E9573F;
+  padding-right: 10px;
+  padding-left: 10px;
+  font-size: 24px; 
+  font-family: 'Bree Serif', serif;
+  padding-left: 14px;
+  padding-top: 8px;
+}
+
 .dropdown-menu {
   width: 500px;
   padding-top: 15px;
