--- a/app/views/atags/show.html.erb
+++ b/app/views/atags/show.html.erb
@@ -1,96 +1,74 @@
 <div class="wrapper">
-    <div class="box">
+  <div class="box">
+    <div class="column col-sm-12 col-xs-12" id="main">
+      <!-- top nav -->
+      <div class="navbar navbar-blue navbar-static-top">
 
-      <div class="column col-sm-12 col-xs-12" id="main">
-          <!-- top nav -->
-                <div class="navbar navbar-blue navbar-static-top">
+          <div class="navbar-header col-sm-3">
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle</span>
+              <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+            </button>
+            <div>
+              <%= link_to image_tag('think_space_logo.png', :class => "tslogo"), '/' %>
+            </div>
+              <%= link_to 'Think Space', '/', :class => "think_space" %>
+          </div>
 
-                    <div class="navbar-header col-sm-3">
-                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle</span>
-                        <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                      </button>
-                      <div>
-                        <%= link_to image_tag('think_space_logo.png', :class => "tslogo"), '/' %>
-                      </div>
-                        <%= link_to 'Think Space', '/', :class => "think_space" %>
-                    </div>
+        <div class="col-sm-9">
+          <nav class="collapse navbar-collapse" role="navigation">
 
-                  <div class="col-sm-9">
-                    <nav class="collapse navbar-collapse" role="navigation">
+          	<%= link_to '#' + @atag.tag, @atag, :class => 'atag_title_link' %>
+          	
+            <%# Render Notifications Element %>
+            <%= render 'notifications/index' %>
 
-                    	<%= link_to '#' + @atag.tag, @atag, :class => 'atag_title_link' %>
-                    	
-    	                <%# If user has notifications display them %>
-                      <% @user = User.find_by(ip:request.remote_ip.split('.').join()) %>
-                      <% unless @user == nil %>
-                        <% if @user.ncount > 0 %>
-                          <ul class="nav navbar-nav navbar-right notify notify_active"> 
-                            <li class="dropdown">
-                              <%= link_to @user.ncount, @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} %>
-                              <ul class="dropdown-menu">
-                                <li><div id="notify_ajax"></div></li>
-                              </ul>
-                            </li>
-                          </ul>
-                        <%# Else just show normal %>
-                        <% else %>
-                          <ul class="nav navbar-nav navbar-right notify">
-                            <li class="dropdown">
-                              <%= link_to @user, remote: true, :class => "dropdown-toggle", data: {:toggle=>"dropdown"} do %><i class="fa fa-exclamation fa-lg"></i><% end %>
-                              <ul class="dropdown-menu">
-                                <li><div id="notify_ajax"></div></li>
-                              </ul>
-                            </li>
-                          </ul>
-                        <% end %>
-                      <% end %>
+            <ul class="nav navbar-nav home_button navbar-right">
+            <li>
+              <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
+            </li>
+            </ul>
 
-                      <ul class="nav navbar-nav home_button navbar-right">
-                      <li>
-                        <a href="/"><i class="fa fa-home fa-lg"></i> Home</a>
-                      </li>
-                      </ul>
+          </nav>
+        </div>
+      </div>
+      <!-- /top nav -->
 
-                    </nav>
-                  </div>
-                </div>
-                <!-- /top nav -->
+      <div class='post_external'>
+        <%# For each spliced post made of pieces (text and hashtags) %>
+        <% @aposts_spliced_full.each do |post_pieces| %>
+          <div class="panel panel-default">
 
-<div class='post_external'>
-<%# For each spliced post made of pieces (text and hashtags) %>
-<% @aposts_spliced_full.each do |post_pieces| %>
-  <div class="panel panel-default">
+            <%# Add external link to post in top right corner %>
+            <div class="post_external_link">
+              <a href="<%= '/posts/' + post_pieces[-1].to_s + '/comments' %>">
+               <i class="fa fa-external-link"></i>
+              </a>
+            </div>
 
-  	 <%# Add external link to post in top right corner %>
-     <div class="post_external_link">
-     	<a href="<%= '/posts/' + post_pieces[-1].to_s + '/comments' %>">
-     		<i class="fa fa-external-link"></i></a>
- 	 </div>
+            <div class="panel-body panel_body_text" style="word-wrap: break-word;">
+             <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>   
+             <% post_pieces[0..-2].each do |piece| %>
+              <%= piece %>
+             <% end %>
 
-    <div class="panel-body panel_body_text" style="word-wrap: break-word;">
-     <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>		
-	 <% post_pieces[0..-2].each do |piece| %>
-	 	<%= piece %>
-	 <% end %>
+               <%# Render Post Comments and Comment Box Asynchronously to Post's Stream on Click %>
+               <div id="<%= 'post' + post_pieces[-1].to_s %>"></div>
+            </div>
 
-	 	 <%# Render Post Comments and Comment Box Asynchronously to Post's Stream on Click %>
-	 	 <div id="<%= 'post' + post_pieces[-1].to_s %>"></div>
+            <%# Comments Ajax Link %>
+            <div class='comments_load_box panel-footer'>
+            <%= link_to content_tag(:span, @comments.where(post_id:post_pieces[-1]).length.to_s + ' Response(s)'), '/posts/' + post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
+            </div>
+
+          </div>
+        <% end %>
+      </div>
+
+      <%= will_paginate @aposts %>
+
     </div>
-
-		 <%# Comments Ajax Link %>
-		 <div class='comments_load_box panel-footer'>
-		 <%= link_to content_tag(:span, @comments.where(post_id:post_pieces[-1]).length.to_s + ' Response(s)'), '/posts/' + post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
-		 </div>
-
   </div>
-<% end %>
-</div>
-
-<%= will_paginate @aposts %>
-
-</div>
-</div>
 </div>
