--- a/app/views/atags/_atag.html.erb
+++ b/app/views/atags/_atag.html.erb
@@ -1,7 +1,7 @@
 <%# Ajax Render for Tags %>
 <div class="atag_hover">
 <%= link_to '#' + @atag.tag, @atag, :class => 'atag_title_main' %>
-<a href="<%= '/t/' + @atag.id.to_s %>"><i class="fa fa-external-link fa-2x atag_external_link"></i></a>
+<%= link_to @atag do %><i class="fa fa-external-link fa-2x atag_external_link"></i><% end %>
 </div>
 
 <div class="atags_ajax">
