--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,55 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// Comments Colors
+
+// White
+.comment0 {
+	background-color: #FFFFFF;
+}
+
+// Blue Blue
+.comment1 {
+	background-color: #DEE9FF;
+}
+
+// Alice Blue
+.comment2 {
+	background-color: #F0F8FF;
+}
+
+// Darker Azure Turquoise
+.comment3 {
+	background-color: #E8FFFE;
+}
+
+// Honeydew Green
+.comment4 {
+	background-color: #F0FFF0;
+}
+
+// Ivory Yellow
+.comment5 {
+	background-color: #FFFFF0;
+}
+
+// Floral White (Orange)
+.comment6 {
+	background-color: #FFFAF0;
+}
+
+// Light Rose Red
+.comment7 {
+	background-color: #FFF0F0;
+}
+
+// Royal Purple
+.comment8 {
+	background-color: #F8F0FF;
+}
+
+// Light Gray
+.comment9 {
+	background-color: #F7F7F7;
+}
