--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -9,8 +9,13 @@
  	 </div>
 
     <div class="panel-body panel_body_text" style="word-wrap: break-word;">
-     <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>		
-	 <% post_pieces[0..-2].each do |piece| %>
+     <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>	
+     
+     <div class="<%= 'post_color' + post_pieces[-2].to_s  %> post_color_tag">
+     	<div class="post_color_tag"></div>
+     </div>	
+
+	 <% post_pieces[0..-3].each do |piece| %>
 	 	<%= piece %>
 	 <% end %>
 
