compiled for production and lightened up color avatars

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -72,47 +72,47 @@
 
 // Blue Blue
 .post_color1 {
-  background-color: #0055FF;
+  background-color: #9BBCFF;
 }
 
 // Alice Blue
 .post_color2 {
-  background-color: #0088FF;
+  background-color: #9CD1FF;
 }
 
 // Darker Azure Turquoise
 .post_color3 {
-  background-color: #00FFF4;
+  background-color: #9BFFFB;
 }
 
 // Honeydew Green
 .post_color4 {
-  background-color: #00FA00;
+  background-color: #9BFF9B;
 }
 
 // Ivory Yellow
 .post_color5 {
-  background-color: #FFFF00;
+  background-color: #FFFF9B;
 }
 
 // Floral White (Orange)
 .post_color6 {
-  background-color: #FFAA00;
+  background-color: #FFDE9B;
 }
 
 // Light Rose Red
 .post_color7 {
-  background-color: #F60000;
+  background-color: #FF9B9B;
 }
 
 // Royal Purple
 .post_color8 {
-  background-color: #8800FF;
+  background-color: #D09BFF;
 }
 
 // Light Gray
 .post_color9 {
-  background-color: #000000;
+  background-color: #ACACAC;
 }
 
 // Placeholder Text Formatting cross-browser
